force-app/main/default/objects/Resource__c/fields/Holding_Type__c.field-meta.xml
<CustomField>
    <fullName>Holding_Type__c</fullName>
    <label>Holding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Borrowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>