force-app/main/default/objects/Resource__c/fields/Resource_Link__c.field-meta.xml
<CustomField>
    <fullName>Resource_Link__c</fullName>
    <label>Resource Link</label>
    <type>Url</type>
</CustomField>