force-app/main/default/objects/Resource__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example Supplier</fullName>
            </value>
            <value>
                <fullName>Link Assistive</fullName>
            </value>
            <value>
                <fullName>Control Bionics</fullName>
            </value>
            <value>
                <fullName>Liberator</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>Pearson</fullName>
            </value>
            <value>
                <fullName>Ablenet</fullName>
            </value>
            <value>
                <fullName>Learning Resources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>