force-app/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>