force-app/main/default/objects/Resource__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Tier__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>